# finanzbuch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose-with-xorg.sh  development.md  docker-compose.yml  rustfmt.toml  sample.yaml
.cargo/: config.toml
binaries/flatpak/: org.flatpak.Hello.yml
cli/: Cargo.toml  Examples.md  rustfmt.toml
cli/src/: accounting.rs  investing.rs  main.rs
docker/: Dockerfile  compose-with-xorg.sh  docker-compose.yml
finance-yaml/: Cargo.toml  README.md  development.md  rustfmt.toml
finance-yaml/src/: datafile.rs  lib.rs
finance-yaml/tests/: tests_lib.rs
finanzbuch_lib/: Cargo.toml  development.md  sample.yaml
finanzbuch_lib/src/: datafile.rs  fast_date.rs  lib.rs
finanzbuch_lib/src/accounting/: accounting_month.rs  accounting_year.rs  mod.rs  recurrence.rs
finanzbuch_lib/src/investing/: depot.rs  depot_element.rs  depot_entry.rs  inv_months.rs  inv_variant.rs  inv_year.rs  mod.rs  savings_plan_section.rs
finanzbuch_lib/tests/: fast_date.rs  lib.rs  lib_tests.rs  tests_lib.rs
flatpak_dep_writer/: Cargo.toml
flatpak_dep_writer/src/: main.rs
src/: csv_reader.rs  datafile.rs  lib.rs  main.rs  structs.rs
src/accounting/: accounting_month.rs  accounting_year.rs  mod.rs  recurrence.rs
src/integration_tests/: tests_main.rs  tests_structs.rs
src/investing/: depot_element.rs  inv_months.rs  inv_year.rs  mod.rs  savings_plan_section.rs
src/structs/: accounting.rs  config.rs  datafile.rs  mod.rs  month.rs  yamlfile.rs  year.rs
tauri/: STYLE_RULES.md
tests/: tests_lib.rs  tests_structs.rs
(+56 files in other folders)
