[package]
name = "finance-yaml"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
dirs = "5.0.1"
csv = "1.3.0"
