[package]
name = "finanzbuch_lib"
version = "2.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
dirs = "5.0.1"
csv = "1.3.0"
fxhash = "0.2.1"

[dev-dependencies]
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
